prowlarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun
          imagePullPolicy: Always
          securityContext:
            privileged: true
            readOnlyRootFilesystem: false
            capabilities:
              add:
                - NET_ADMIN
          resources: {}
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr
          imagePullPolicy: Always
          ports:
            - containerPort: 9696
              name: http
              protocol: TCP
  #          livenessProbe:
  #            httpGet:
  #              path: /notifications
  #              port: http
  #            initialDelaySeconds: 60
  #          readinessProbe:
  #            httpGet:
  #              path: /notifications
  #              port: http
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /tv
              name: media
              subPath: TV
            - mountPath: /tv_sync
              name: sync
              subPath: tv
            - mountPath: /movies
              name: media
              subPath: Movies
            - mountPath: /movies_sync
              name: sync
              subPath: movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: media
          persistentVolumeClaim:
            claimName: media-share
        - name: sync
          persistentVolumeClaim:
            claimName: media-share-sync
