prowlarr/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`db3000.xmple.io`) && PathPrefix(`/prowlarr/`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
      middlewares:
        - name: forwardauth-authelia
          namespace: authelia
  tls:
    secretName: db3000-tls
    options:
      name: mintls13
      namespace: traefik
